--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
   </head>
 </html>
 <body>
-  <textarea id="source">class:center,middle
+  <textarea id="source">
+class:center,middle
+# Text Analysis & Visualization
+
+---
+class:center,middle,inverse
 # Text Visualization
 
 ## An Exploration of Visual Mappings
@@ -114,15 +119,6 @@ _(Words that occur only once in the document)_
 class:middle
 # Time
 ---
-<!-- ![history flow](assets/history_flow.png)
-[History Flow](http://www.bewitched.com/historyflow.html) -->
-
-<!-- --- -->
-
-<!-- ![Notabilia](assets/notabilia.png)
-[Notabilia](http://notabilia.net/) -->
-
-<!-- --- -->
 
 <br/>
 <br/>
@@ -130,6 +126,17 @@ class:middle
 <br/>
 <br/>
 [How the Internet Talks](http://projects.fivethirtyeight.com/reddit-ngram/?keyword=lol.win.omg.cute.fail.wtf&start=20071015&end=20150831&smoothing=10)
+
+---
+![history flow](assets/history_flow.png)
+[History Flow](http://www.bewitched.com/historyflow.html)
+
+---
+
+![Notabilia](assets/notabilia.png)
+[Notabilia](http://notabilia.net/)
+
+---
 
 <!-- ---
 
@@ -208,8 +215,6 @@ class:center,middle
 
 ---
 
-class:middle,center,inverse
-# Now It's Your Turn!
 </textarea>
   <script src="vendor/remark.min.js" type="text/javascript"></script>
   <script type="text/javascript">
@@ -217,7 +222,7 @@ class:middle,center,inverse
   </script>
   <script src="vendor/underscore.js" type="text/javascript"></script>
   <script src="vendor/d3.js" type="text/javascript"></script>
-  
+
 
   <script>
   var links = document.links;
