add start to comparing docs

--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@ class:center,middle,inverse
 
 
 ---
+class:center,middle
+# Text As Data Processing
+
+---
 # Common Text Processing Procedures
 
 # (Using [textkit](http://learntextvis.github.io/textkit/))
@@ -200,6 +204,9 @@ _get:_
 class:center,middle
 # But what does _Interesting_ mean?
 ---
+class:center,middle
+# Finding Keywords
+---
 # Is it most frequent?
 
 ## Word frequency of _Alice in Wonderland_
@@ -320,6 +327,32 @@ And `N` is the number of documents total.
 <br/><br/>
 
 [Term Weighting for Humanists](https://porganized.com/2016/03/09/term-weighting-for-humanists/)
+
+---
+class:center,middle
+# Comparing Documents
+
+---
+# Comparing Documents
+
+---
+# General Idea:
+
+> Use the metrics calculated for a single document
+
+> Combine for a lot of documents
+
+> Represent in a vectorizable way
+---
+# Document Matrix
+
+---
+![vec space](assets/vector-space-2d-manning.png)
+
+---
+# Clustering
+
+![k means](assets/kmeans.jpg)
 
 ---
 class:center,middle,inverse
@@ -445,8 +478,6 @@ class:middle
 
 ![Notabilia](assets/notabilia.png)
 [Notabilia](http://notabilia.net/)
-
----
 
 <!-- ---
 
