--- a/index.html
+++ b/index.html
@@ -352,7 +352,24 @@ class:center,middle
 ---
 # Clustering
 
-![k means](assets/kmeans.jpg)
+![k means](assets/k_mean_send.gif)
+---
+# Bonus Round
+
+# Word Vectors
+---
+# Word2Vec
+
+![](assets/word2vec-distributed-representation.png)
+
+> [Amazing Power of Word Vectors](https://blog.acolyer.org/2016/04/21/the-amazing-power-of-word-vectors/)
+---
+![](assets/word2vec-king-queen-vectors.png)
+---
+![](assets/word2vec-king-queen-composition.png)
+---
+# Compare Different Languages!
+![](assets/vector_space_model_multilingual1.png)
 
 ---
 class:center,middle,inverse
