--- a/index.html
+++ b/index.html
@@ -357,6 +357,8 @@ class:center,middle
 > Use geometry and vector math to compare
 ---
 # Document Matrix
+
+![doc matrix](assets/word_table.jpg)
 ---
 # Each Row is a Vector
 
