--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ class:center,middle,inverse
 <br/><br/>
 
 * Basic text data processing
-* Comparing words in documents
+* Finding interesting content in a document
 * Comparing and clustering documents
 
 
@@ -79,6 +79,7 @@ class:center,middle
 # Common Text Processing Procedures
 
 # (Using [textkit](http://learntextvis.github.io/textkit/))
+
 
 <br/>
 
